# pacmancoder.github.io

./: .gitignore  .travis.yml  404.html  CNAME  Cargo.toml  README.md  build.py  clean-blog.css  config.toml  index.html  robots.txt  search_index.en.js  sitemap.xml
.github/workflows/: deploy.yml
about/: index.html
apps/: web_freepdk_gen.js  web_freepdk_gen_bg.wasm
apps/freepdk-gen/: Cargo.toml
apps/freepdk-gen/src/: frontend.rs  lib.rs  web_frontend.rs
categories/: index.html
categories/3d-printing/: index.html
categories/3d-printing/page/1/: index.html
categories/apps/: index.html
categories/apps/page/1/: index.html
categories/how-to/: index.html
categories/how-to/page/1/: index.html
content/freepdk-uart-gen/: index.md
content/how-to-usbser-sys/: index.md
content/pages/about/: index.md
content/universal-tabletop-spool-holder/: index.md
freepdk-uart-gen/: index.html
how-to-usbser-sys/: index.html
page/1/: index.html
tags/: index.html
tags/3d-model/: index.html
tags/3d-model/page/1/: index.html
tags/drivers/: index.html
tags/drivers/page/1/: index.html
tags/hardware/: index.html
tags/padauk/: index.html
tags/windows/: index.html
templates/: 404.html  index.html  page.html  share_buttons.html
templates/categories/: list.html  single.html
templates/shortcodes/: app_freepdk_uart_gen.html
templates/tags/: list.html  single.html
themes/clean-blog/sass/: _global.scss  _masthead.scss
themes/clean-blog/templates/: about.html  index.html  post_macros.html
universal-tabletop-spool-holder/: index.html
(+3 files in other folders)
